--- a/.devcontainer/default/devcontainer.json
+++ b/.devcontainer/default/devcontainer.json
@@ -17,7 +17,7 @@
 		},
 		"codespaces": {}
 	},
-	"postCreateCommand": "cp ./assets/provider-config-local.txt ~/.terraformrc",
+	"postCreateCommand": "cp ./assets/provider-config-local.txt ~/.terraformrc && ./assets/install_cf.sh",
 	"hostRequirements": {
 		"memory": "4gb"
 	},
